--- a/geo-byte-frontend/src/app/route/route.component.html
+++ b/geo-byte-frontend/src/app/route/route.component.html
@@ -8,31 +8,27 @@
         </div>
         <div class="row align-items-center justify-content-center">
             <div class="col-12">
-                <form>
+                <form [formGroup]="routeForm" (ngSubmit)="onGenerateRoute()">
                     <div class="mb-4 d-flex row">
                         <div class="col-4">
                             <label for="">Origin</label>
-                            <select name="" id="" class="form-control">
+                            <select name="" id="" class="form-control" formControlName="origin">
                                 <option value="">Select Location</option>
-                                <option value="">Abeokuta</option>
-                                <option value="">Tokyo</option>
-                                <option value="">Lokoja</option>
-                                <option value="">Somolu</option>
+                                <option *ngFor="let location of locations;" value="{{ location.id }}">{{ location.name }}</option>
                             </select>
+                            <small *ngIf="addForm?.controls?.origin?.touched && addForm?.controls?.origin?.errors" class="help-block text-danger">Please select an origin location</small>
                         </div>
                         <div class="col-4">
                             <label for="">Destination</label>
-                            <select name="" id="" class="form-control">
+                            <select name="" id="" class="form-control" formControlName="destination">
                                 <option value="">Select Location</option>
-                                <option value="">Abeokuta</option>
-                                <option value="">Tokyo</option>
-                                <option value="">Lokoja</option>
-                                <option value="">Somolu</option>
+                                <option *ngFor="let location of locations;" value="{{ location.id }}">{{ location.name }}</option>
                             </select>
+                            <small *ngIf="addForm?.controls?.destination?.touched && addForm?.controls?.destination?.errors" class="help-block text-danger">Please select an origin location</small>
                         </div>
                         <div class="col-4">
                             <label for=""></label>
-                            <button class="btn btn-block btn-success text-white" type="submit">Get Optimal
+                            <button class="btn btn-block btn-success text-white" type="submit" [disabled]="locations.length < 3 || !routeForm.valid">Get Optimal
                                 Route</button>
                         </div>
                     </div>
@@ -51,8 +47,8 @@
 <!-- <section> begin ============================-->
 <section class="py-4 pt-md-6 bg-light" id="pricing">
 
-    <div class="container">
-        <div class="text-center mb-5 text-justify">
+    <div class="container" [ngClass]="{'blur': !routeLoaded}">
+        <div class="text-center mb-7 text-justify">
             <h1>Generated Routes.</h1>
         </div>
         <div class="row justify-content-center">
@@ -66,7 +62,7 @@
                                         Route</span>
                                 </div>
                                 <div class="d-flex justify-content-center"><span class="h2 mb-0 mt-2">$</span><span
-                                        class="display-3 font-weight-normal">29</span><span
+                                        class="display-3 font-weight-normal">{{ optimalRoute?.totalCost }}</span><span
                                         class="h2 align-self-end mb-1">/package</span></div>
                                 <p class="text-center text-muted mb-2 mb-md-4"></p>
                                 <ul class="list-unstyled">
@@ -79,7 +75,7 @@
                                                 <path fill-rule="evenodd"
                                                     d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
                                                 </path>
-                                            </svg></span>Covers a distance of 55km</li>
+                                            </svg></span>Covers a distance of {{ optimalRoute?.km }}km</li>
                                     <li class="mb-3"><span class="mr-2">
                                             <svg class="bi bi-check-circle" width=".8em" height=".8em"
                                                 viewBox="0 0 16 16" fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
@@ -89,7 +85,7 @@
                                                 <path fill-rule="evenodd"
                                                     d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
                                                 </path>
-                                            </svg></span>2 Stops are made along this route</li>
+                                            </svg></span>{{ optimalRoute?.stops?.length }} {{ optimalRoute?.stops?.length == 1 ? 'Stop is' : 'Stops are'}} made along this route</li>
                                     <li class="mb-3"><span class="mr-2">
                                             <svg class="bi bi-check-circle" width=".8em" height=".8em"
                                                 viewBox="0 0 16 16" fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
@@ -103,30 +99,14 @@
                                 </ul>
                                 <div class="timeline">
                                     <ul>
-                                        <li><span></span>
+                                        <li *ngFor="let path of optimalRoute?.paths; index as i;"><span></span>
                                             <div>
-                                                <div class="title">Abeokuta</div>
-                                                <div class="info">Package departs origin location</div>
-                                                <div class="type">Origin</div>
-                                            </div> <span class="number"><span>0km</span>
-                                                <span>$0</span></span>
-                                        </li>
-                                        <li>
-                                            <div><span></span>
-                                                <div class="title">Tokyo</div>
-                                                <div class="info">Package arrives and after clearance it departs
-                                                </div>
-                                                <div class="type">Stop</div>
-                                            </div> <span class="number"><span>9.4km</span>
-                                                <span>$9.4</span></span>
-                                        </li>
-                                        <li>
-                                            <div><span></span>
-                                                <div class="title">Korea</div>
-                                                <div class="info">Package arrives destination location</div>
-                                                <div class="type">Destination</div>
-                                            </div> <span class="number"><span>55km</span>
-                                                <span>$29</span></span>
+                                                <div class="title">{{ getLocationName(path.location_id) }}</div>
+                                                <div class="info">{{ i == 0 ? 'Package departs origin location' : (i == optimalRoute?.paths?.length - 1 ? 'Package arrives destination location' : 'Package arrives and after clearance it departs') }}</div>
+                                                <div class="type">{{ i == 0 ? 'Origin' : (i == optimalRoute?.paths?.length - 1 ? 'Destination' : 'Stop') }}</div>
+                                            </div> 
+                                                <!-- <span class="number"><span>{{ path.km }}km</span>
+                                                <span>${{ path.clearing_cost }}</span></span> -->
                                         </li>
                                     </ul>
                                 </div>
@@ -138,15 +118,15 @@
                         <!-- Badge -->
                         <div class="route-badge bg-success text-uppercase">Recommended</div>
                     </div>
-                    <div class="col-md-6 position-relative">
-                        <div class="card rounded-lg shadow-lg border-0 overflow-hidden">
+                    <div class="col-md-6 position-relative worstRoute" *ngIf="routeLoaded && worstRoute">
+                        <div class="card rounded-lg shadow-lg border-0 overflow-hidden" >
                             <div class="card-body px-4 px-sm-7 px-md-4 px-xl-7 py-6 py-md-5 py-lg-6">
                                 <div class="text-center mb-5"><span
                                         class="badge bg-light font-weight-normal text-uppercase text-primary">Most
                                         Expensive</span>
                                 </div>
                                 <div class="d-flex justify-content-center"><span class="h2 mb-0 mt-2">$</span><span
-                                        class="display-3 font-weight-normal">450</span><span
+                                        class="display-3 font-weight-normal">{{ worstRoute?.totalCost }}</span><span
                                         class="h2 align-self-end mb-1">/package</span></div>
                                 <p class="text-center text-muted mb-2 mb-md-4"></p>
                                 <ul class="list-unstyled">
@@ -159,7 +139,7 @@
                                                 <path fill-rule="evenodd"
                                                     d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
                                                 </path>
-                                            </svg></span>Covers a distance of 165km</li>
+                                            </svg></span>Covers a distance of {{ worstRoute?.km }}km</li>
                                     <li class="mb-3"><span class="mr-2">
                                             <svg class="bi bi-check-circle" width=".8em" height=".8em"
                                                 viewBox="0 0 16 16" fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
@@ -169,7 +149,7 @@
                                                 <path fill-rule="evenodd"
                                                     d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z">
                                                 </path>
-                                            </svg></span>4 Stops are made along this route</li>
+                                            </svg></span>{{ worstRoute?.stops?.length }} Stops are made along this route</li>
                                     <li class="mb-3"><span class="mr-2">
                                             <svg class="bi bi-check-circle" width=".8em" height=".8em"
                                                 viewBox="0 0 16 16" fill="#389E7F" xmlns="http://www.w3.org/2000/svg">
@@ -183,30 +163,14 @@
                                 </ul>
                                 <div class="timeline">
                                     <ul>
-                                        <li><span></span>
+                                        <li *ngFor="let path of worstRoute?.paths; index as i;"><span></span>
                                             <div>
-                                                <div class="title">Abeokuta</div>
-                                                <div class="info">Package departs origin location</div>
-                                                <div class="type">Origin</div>
-                                            </div> <span class="number"><span>0km</span>
-                                                <span>$0</span></span>
-                                        </li>
-                                        <li>
-                                            <div><span></span>
-                                                <div class="title">Tokyo</div>
-                                                <div class="info">Package arrives and after clearance it departs
-                                                </div>
-                                                <div class="type">Stop</div>
-                                            </div> <span class="number"><span>9.4km</span>
-                                                <span>$9.4</span></span>
-                                        </li>
-                                        <li>
-                                            <div><span></span>
-                                                <div class="title">Korea</div>
-                                                <div class="info">Package arrives destination location</div>
-                                                <div class="type">Destination</div>
-                                            </div> <span class="number"><span>55km</span>
-                                                <span>$29</span></span>
+                                                <div class="title">{{ getLocationName(path.location_id) }}</div>
+                                                <div class="info">{{ i == 0 ? 'Package departs origin location' : (i == worstRoute?.paths?.length - 1 ? 'Package arrives destination location' : 'Package arrives and after clearance it departs') }}</div>
+                                                <div class="type">{{ i == 0 ? 'Origin' : (i == worstRoute?.paths?.length - 1 ? 'Destination' : 'Stop') }}</div>
+                                            </div> 
+                                                <!-- <span class="number"><span>{{ path.km }}km</span>
+                                                <span>${{ path.clearing_cost }}</span></span> -->
                                         </li>
                                     </ul>
                                 </div>
