--- a/geo-byte-frontend/src/app/home/home.component.html
+++ b/geo-byte-frontend/src/app/home/home.component.html
@@ -7,14 +7,14 @@
             <div class="col-md-5 col-lg-6 order-md-1"><img class="img-fluid mb-5 mb-md-0"
                     src="assets/img/destinations.svg" alt="" /></div>
             <div class="col-md-7 col-lg-6">
-                <h1 class="display-6 text-center text-md-left">Welcome to <span class="text-primary">GeoByte</span>.
+                <h1 class="display-6 text-center text-md-left">Welcome to <span class="text-primary">OptiRoute</span>.
                     <br />Lets create the future of logistics.
                 </h1>
                 <p class="lead text-center text-md-left text-muted mb-3">Find the best routes to deliver
                     packages in the fastest time possible, stand out in the crowd, work with<br
-                        class="d-none d-xl-block d-xxl-none" /> GeoByte.</p>
+                        class="d-none d-xl-block d-xxl-none" /> OptiRoute.</p>
                 <div class="text-center text-md-left pt-4">
-                    <a class="btn btn-lg btn-primary hover-top-shadow mr-3" [routerLink]="['/sign-up']">Sign Up
+                    <a class="btn btn-lg btn-primary hover-top-shadow mr-3" [routerLink]="['/route']">Get Optimal Route
                         <svg class="bi bi-arrow-right-short" width="1.2em" height="1.2em" viewBox="0 0 16 16"
                             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd"
@@ -24,8 +24,8 @@
                             </path>
                         </svg>
                     </a>
-                    <a class="btn btn-lg btn-light text-primary shadow-lg hover-top-shadow" [routerLink]="['/sign-in']">Sign
-                        In</a>
+                    <a class="btn btn-lg btn-light text-primary shadow-lg hover-top-shadow" [routerLink]="['/locations']">View Locations
+                    </a>
                 </div>
             </div>
         </div>
