--- a/geo-byte-frontend/src/app/locations/locations.component.html
+++ b/geo-byte-frontend/src/app/locations/locations.component.html
@@ -3,7 +3,7 @@
 <section>
 
     <div class="container bg-light">
-        <div class="text-center my-5 d-flex">
+        <div class="text-center p-3 d-flex">
             <h2>Map</h2>
         </div>
         <div class="row align-items-center justify-content-center">
@@ -57,7 +57,7 @@
                 data-target="#addLocationModal">Add a location</button>
         </div>
         <div class="row align-items-center justify-content-center">
-            <div class="col-12 text-center">
+            <div class="col-12 text-center table-responsive">
                 <table class="table table-striped">
                     <thead>
                         <tr>
@@ -101,49 +101,6 @@
 <!-- <section> close ============================-->
 <!-- ============================================-->
 
-
-<section class="py-7">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 col-lg-3">
-                <h4 class="text-primary font-weight-bold">GeoByte.</h4>
-                <p class="mb-2 text-muted">Where speed connects <br> with efficiency.</p>
-
-            </div>
-            <div class="col-6 col-md-4 col-lg-2">
-            </div>
-            <div class="col-6 col-md-4 col-lg-2">
-            </div>
-            <div class="col-6 col-md-4 offset-md-4 col-lg-2 offset-lg-0">
-            </div>
-            <div class="col-6 col-md-4 col-lg-3">
-                <h6 class="footer-title">Features</h6>
-                <ul class="list-unstyled mb-0">
-                    <li class="mb-2 mb-lg-2"><a class="text-500 text-decoration-none"
-                            href="javascript:void(0)">Lightening Fast Algorithm</a></li>
-                    <li class="mb-2 mb-lg-2"><a class="text-500 text-decoration-none" href="javascript:void(0)">Maximum
-                            Savings on Cost</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-<!-- ============================================-->
-<!-- <section> begin ============================-->
-<section class="text-center border-top footer-text py-3">
-
-    <div class="container">Made with <a class="text-500 text-decoration-none" target="_blank"
-            href="https://themewagon.com/"> ThemeWagon </a> by <a target="_blank" class="text-500 text-decoration-none"
-            href="https://www.phainix.co"> Adekogbe Faith </a>
-    </div>
-    <!-- end of .container-->
-
-</section>
-<!-- <section> close ============================-->
-<!-- ============================================-->
 
 
 <!-- Add Modal -->
